wow we have done it

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ cachetools==4.2.4
 certifi==2021.10.8
 charset-normalizer==2.0.9
 Django==3.2.10
+django-cors-headers==3.10.1
 flatbuffers==2.0
 gast==0.4.0
 google-auth==2.3.3
