--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /.idea
+/backend/home/__pycache__
+/backend/brain_tumor_segmentation/__pycache__
 /backend/env
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
